<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateGroupActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageButton
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_3sdp"
            android:background="@color/trans"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_chevron_left_24"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_group"
            android:layout_gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/next"
            android:layout_gravity="end"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/blue"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            />




    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <ImageView
                android:id="@+id/layoutImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/add_image"
                android:src="@drawable/icons8add80" />


        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:gravity="center"
            android:textSize="@dimen/_8sdp"
            />

        <TextView
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:gravity="start"
            android:textSize="@dimen/_8sdp"
            />
        <EditText
            android:id="@+id/inputNameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:paddingTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participants_2"
            android:gravity="start"
            android:textSize="@dimen/_8sdp"
            />
    </LinearLayout>

    


</androidx.constraintlayout.widget.ConstraintLayout>